--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,20 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.link-underline::after {
+  content: '';
+  display: block;
+  width: 0%;
+  height: 2px;
+  background: currentColor;
+  transition: width 0.3s ease;
+}
+
+.link-underline:hover::after {
+  width: 100%;
+}
+
+
 @keyframes blob {
   0% {
     transform: translate(0, 0) scale(1);
@@ -85,4 +99,68 @@ body {
   .animate-blob {
     animation-duration: 6s;
   }
+}
+
+
+.card::before,
+.card::after {
+  content: "";
+  border-radius: inherit;
+  position: absolute;
+  inset: 0;
+  opacity: 0;
+  transition: opacity 500ms;
+  z-index: 1;
+}
+
+.card:hover::before {
+  opacity: 1;
+  background: radial-gradient(800px circle at var(--mouse-x) var(--mouse-y),
+      var(--glow-color, rgba(255, 255, 255, 0.06)),
+      transparent 40%);
+}
+
+.card:hover::after {
+  opacity: 1;
+  background: radial-gradient(600px circle at var(--mouse-x) var(--mouse-y),
+      var(--glow-color-strong, rgb(255, 255, 255)),
+      transparent 40%);
+}
+
+
+.glow-card::before,
+.glow-card::after {
+  content: "";
+  border-radius: inherit;
+  position: absolute;
+  inset: 0;
+  opacity: 0;
+  transition: opacity 500ms;
+  z-index: 20;
+}
+
+.glow-card:hover::before {
+  opacity: 1;
+  background: radial-gradient(800px circle at var(--mouse-x) var(--mouse-y),
+      rgba(255, 255, 255, 0.06),
+      transparent 40%);
+}
+
+.dark .glow-card:hover::after {
+  opacity: 1;
+  background: radial-gradient(600px circle at var(--mouse-x) var(--mouse-y),
+      rgba(255, 255, 255, 0.4),
+      transparent 40%);
+}
+
+.glow-card:hover::before {
+  background: radial-gradient(800px circle at var(--mouse-x) var(--mouse-y),
+      rgba(255, 255, 255, 0.06),
+      transparent 40%);
+}
+
+.dark .glow-card:hover::after {
+  background: radial-gradient(600px circle at var(--mouse-x) var(--mouse-y),
+      rgba(255, 255, 255, 0.74),
+      transparent 40%);
 }
